# slides.transnum.hpcia

./: .gitignore  .latexmkrc  Makefile  README.md  a.cli  beamercolorthemenumpex.sty  beamerfontthemenumpex.sty  beamerthemenumpex.sty  gitHeadLocal.gin  numpex.typ  poster.template.tex  poster.template.typ  presentation.template.tex  presentation.template.typ  pyproject.toml  slides.transnum.hpcia.tex
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
